--- a/arch/arm64/configs/phoenix_defconfig
+++ b/arch/arm64/configs/phoenix_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.175 Kernel Configuration
+# Linux/arm64 4.14.177 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -661,6 +661,9 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
+CONFIG_KUSER_HELPERS=y
+CONFIG_COMPAT_VDSO=y
+CONFIG_CROSS_COMPILE_ARM32=""
 
 #
 # Power management options
@@ -684,6 +687,7 @@ CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -828,8 +832,6 @@ CONFIG_DEFAULT_BBR=y
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="bbr"
 # CONFIG_TCP_MD5SIG is not set
-# CONFIG_TCP_MD5SIG is not set
-
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
@@ -1466,6 +1468,7 @@ CONFIG_QPNP_MISC=y
 # CONFIG_TI_DRV8846 is not set
 # CONFIG_TEST_IRQ_REQUESTER is not set
 CONFIG_SIMTRAY_STATUS=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1706,6 +1709,7 @@ CONFIG_NET_VENDOR_ALTEON=y
 # CONFIG_ACENIC is not set
 # CONFIG_ALTERA_TSE is not set
 CONFIG_NET_VENDOR_AMAZON=y
+# CONFIG_ENA_ETHERNET is not set
 CONFIG_NET_VENDOR_AMD=y
 # CONFIG_AMD8111_ETH is not set
 # CONFIG_PCNET32 is not set
@@ -3521,6 +3525,7 @@ CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_LOGO_LINUX_CLUT224=y
+CONFIG_KLAPSE=y
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
@@ -3921,7 +3926,6 @@ CONFIG_USB_ISP1760_HOST_ROLE=y
 # CONFIG_USB_EMI26 is not set
 # CONFIG_USB_ADUTUX is not set
 # CONFIG_USB_SEVSEG is not set
-# CONFIG_USB_RIO500 is not set
 # CONFIG_USB_LEGOTOWER is not set
 # CONFIG_USB_LCD is not set
 # CONFIG_USB_CYPRESS_CY7C63 is not set
@@ -4613,7 +4617,7 @@ CONFIG_ARM_ARCH_TIMER_OOL_WORKAROUND=y
 CONFIG_FSL_ERRATUM_A008585=y
 CONFIG_HISILICON_ERRATUM_161010101=y
 CONFIG_ARM64_ERRATUM_858921=y
-# CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
+CONFIG_ARM_ARCH_TIMER_VCT_ACCESS=y
 # CONFIG_ARM_TIMER_SP804 is not set
 # CONFIG_ATMEL_PIT is not set
 # CONFIG_SH_TIMER_CMT is not set
@@ -5978,6 +5982,7 @@ CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT_MAP=y
 CONFIG_HAS_DMA=y
+# CONFIG_SGL_ALLOC is not set
 # CONFIG_DMA_NOOP_OPS is not set
 # CONFIG_DMA_VIRT_OPS is not set
 CONFIG_CPU_RMAP=y
@@ -5997,9 +6002,3 @@ CONFIG_SBITMAP=y
 CONFIG_CJSON=y
 CONFIG_HWCONF_MANAGER=y
 # CONFIG_FACTORY_BUILD is not set
-CONFIG_BOEFFLA_WL_BLOCKER=y
-CONFIG_KLAPSE=y
-CONFIG_FORCE_FAST_CHARGE=y
-
-CONFIG_KUSER_HELPERS=y
-CONFIG_COMPAT_VDSO=y
